--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelApp">
-        <activity android:name=".Trips"></activity>
+        <activity android:name=".NewTrip"></activity>
+        <activity android:name=".Trips" />
         <activity android:name=".UserProfile" />
         <activity android:name=".Login">
             <intent-filter>
